# kurrentvision

./: .gitignore  README.html  README.md  base_model_predictions.txt  main.py  pyproject.toml
models/kurrent_ocr/trocr_synthetic/: config.json
runners/: kraken_finetune_runner.py  kraken_predict_runner.py
src/data_collection/senatsprotokolle_collection/: image_scraping.py
src/data_collection/synthetic_text_generation/: __init__.py  prepare_texts.py  text_generator.py
src/modeling/: basic_model.py  constants.py  dataset.py  kraken_finetune.py  kurrent_ocr.py  line_segmentation.py  ocr_preds.py  utils.py
src/modeling/datasets/: __init__.py  base.py  basic_model.py  error_correction.py  trocr.py
src/modeling/inference/: xml_inference.py
src/modeling/inference/image_predictions/trocr-kurrent/: inference_both_train.txt  inference_both_val.txt  inference_raw_test.txt
src/modeling/inference/image_predictions/trocr_both_best/: inference_raw_test.txt
src/modeling/training/: basic_model.py  error_correction.py  grammar_corrector.py  trocr_kurrent.py
