[project]
name = "kurrentvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "seaborn>=0.13.2",
    "setuptools<81",
    "tensorflow>=2.20.0",
]
